--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -22,7 +22,7 @@
 
 ::before,
 ::after {
-  --tw-content: '';
+  --tw-content: "";
 }
 
 /*
@@ -42,9 +42,23 @@ html {
   -moz-tab-size: 4;
   /* 3 */
   -o-tab-size: 4;
-     tab-size: 4;
+  tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family:
+    ui-sans-serif,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
+    "Noto Sans",
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -85,7 +99,7 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 
 abbr:where([title]) {
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
 }
 
 /*
@@ -129,7 +143,8 @@ code,
 kbd,
 samp,
 pre {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -220,9 +235,9 @@ select {
 */
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
   /* 1 */
   background-color: transparent;
@@ -269,7 +284,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 2. Correct the outline style in Safari.
 */
 
-[type='search'] {
+[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -354,7 +369,8 @@ textarea {
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
 
-input::-moz-placeholder, textarea::-moz-placeholder {
+input::-moz-placeholder,
+textarea::-moz-placeholder {
   opacity: 1;
   /* 1 */
   color: #9ca3af;
@@ -422,7 +438,9 @@ video {
   display: none;
 }
 
-*, ::before, ::after {
+*,
+::before,
+::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -875,21 +893,29 @@ video {
 
 .tw--translate-x-1\/2 {
   --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-translate-y-6 {
   --tw-translate-y: 1.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-rotate-180 {
   --tw-rotate: 180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-cursor-pointer {
@@ -1111,7 +1137,7 @@ video {
 
 .tw-border-primary {
   --tw-border-opacity: 1;
-  border-color: rgb(65 105 225 / var(--tw-border-opacity));
+  border-color: rgb(102 51 153 / var(--tw-border-opacity));
 }
 
 .tw-bg-black\/40 {
@@ -1145,7 +1171,7 @@ video {
 
 .tw-bg-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(65 105 225 / var(--tw-bg-opacity));
+  background-color: rgb(102 51 153 / var(--tw-bg-opacity)) !important;
 }
 
 .tw-bg-slate-100\/80 {
@@ -1176,27 +1202,27 @@ video {
 }
 
 .tw-bg-\[url\(\'\.\.\/src\/assets\/images\/2\.jpg\'\)\] {
-  background-image: url('../src/assets/images/2.jpg');
+  background-image: url("../src/assets/images/2.jpg");
 }
 
 .tw-bg-\[url\(\'\.\.\/src\/assets\/images\/faded-waves\.jpg\'\)\] {
-  background-image: url('../src/assets/images/faded-waves.jpg');
+  background-image: url("../src/assets/images/faded-waves.jpg");
 }
 
 .tw-bg-\[url\(\'\/images\/ocean-3\.jpg\'\)\] {
-  background-image: url('/images/ocean-3.jpg');
+  background-image: url("/images/ocean-3.jpg");
 }
 
 .tw-bg-\[url\(\'\/images\/us_background\.jpg\'\)\] {
-  background-image: url('/images/us_background.jpg');
+  background-image: url("/images/us_background.jpg");
 }
 
 .tw-bg-\[url\(\'\/images\/2\.jpg\'\)\] {
-  background-image: url('/images/2.jpg');
+  background-image: url("/images/2.jpg");
 }
 
 .tw-bg-\[url\(\'\/images\/faded-waves\.jpg\'\)\] {
-  background-image: url('/images/faded-waves.jpg');
+  background-image: url("/images/faded-waves.jpg");
 }
 
 .tw-bg-cover {
@@ -1224,7 +1250,7 @@ video {
 }
 
 .tw-fill-primary {
-  fill: royalblue;
+  fill: rebeccapurple;
 }
 
 .tw-fill-white {
@@ -1233,12 +1259,12 @@ video {
 
 .tw-object-cover {
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .tw-object-center {
   -o-object-position: center;
-     object-position: center;
+  object-position: center;
 }
 
 .tw-p-0 {
@@ -1499,7 +1525,7 @@ video {
 
 .tw-text-primary {
   --tw-text-opacity: 1;
-  color: rgb(65 105 225 / var(--tw-text-opacity));
+  color: rgb(102 51 153 / var(--tw-text-opacity));
 }
 
 .tw-text-red-500 {
@@ -1513,39 +1539,88 @@ video {
 }
 
 .tw-shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
+    0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),
+    0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .tw-shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color),
+    0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .tw-shadow-xl {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+    0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color),
+    0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .tw-backdrop-blur-\[0\.3px\] {
   --tw-backdrop-blur: blur(0.3px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
+    var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
+    var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
+    var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
+    var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
+    var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
+    var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
+    var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
+    var(--tw-backdrop-sepia);
 }
 
 .tw-backdrop-blur-md {
   --tw-backdrop-blur: blur(12px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
+    var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
+    var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
+    var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
+    var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
+    var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
+    var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
+    var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
+    var(--tw-backdrop-sepia);
 }
 
 .tw-transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-property:
+    color,
+    background-color,
+    border-color,
+    text-decoration-color,
+    fill,
+    stroke,
+    opacity,
+    box-shadow,
+    transform,
+    filter,
+    -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
+    backdrop-filter;
+  transition-property:
+    color,
+    background-color,
+    border-color,
+    text-decoration-color,
+    fill,
+    stroke,
+    opacity,
+    box-shadow,
+    transform,
+    filter,
+    backdrop-filter,
+    -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1567,11 +1642,11 @@ video {
 }
 
 .marker\:tw-text-primary *::marker {
-  color: rgb(65 105 225 );
+  color: rgb(102 51 153);
 }
 
 .marker\:tw-text-primary::marker {
-  color: rgb(65 105 225 );
+  color: rgb(102 51 153);
 }
 
 .placeholder\:tw-capitalize::-moz-placeholder {
@@ -1650,7 +1725,7 @@ video {
 }
 
 .before\:tw-content-\[\'\'\]::before {
-  --tw-content: '';
+  --tw-content: "";
   content: var(--tw-content);
 }
 
@@ -1664,12 +1739,12 @@ video {
 }
 
 .hover\:tw-bg-primary\/80:hover {
-  background-color: rgb(65 105 225 / 0.8);
+  background-color: rgb(102 51 153 / 0.8);
 }
 
 .hover\:tw-text-primary:hover {
   --tw-text-opacity: 1;
-  color: rgb(65 105 225 / var(--tw-text-opacity));
+  color: rgb(102 51 153 / var(--tw-text-opacity));
 }
 
 .hover\:tw-underline:hover {
@@ -1679,19 +1754,24 @@ video {
 .hover\:tw-shadow-\[1px_1p_10px_-4px\]:hover {
   --tw-shadow: 1px 1p 10px -4px;
   --tw-shadow-colored: 1px 1p 10px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:tw-shadow-\[1px_1px_10px_-4px\]:hover {
   --tw-shadow: 1px 1px 10px -4px;
   --tw-shadow-colored: 1px 1px 10px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:tw-shadow-xl:hover {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+    0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color),
+    0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:tw-shadow-gray-300:hover {
@@ -1897,128 +1977,131 @@ video {
   }
 }
 
-.\[\&\>button\]\:tw-rounded>button {
+.\[\&\>button\]\:tw-rounded > button {
   border-radius: 0.25rem;
 }
 
-.\[\&\>button\]\:tw-py-2>button {
+.\[\&\>button\]\:tw-py-2 > button {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
 @media (min-width: 768px) {
-  .\[\&\>div\:nth-child\(even\)\]\:md\:tw-bg-gray-500\/50>div:nth-child(even) {
+  .\[\&\>div\:nth-child\(even\)\]\:md\:tw-bg-gray-500\/50
+    > div:nth-child(even) {
     background-color: rgb(107 114 128 / 0.5);
   }
 }
 
-.\[\&\>div\>div\]\:tw-basis-1\/2>div>div {
+.\[\&\>div\>div\]\:tw-basis-1\/2 > div > div {
   flex-basis: 50%;
 }
 
-.first\:\[\&\>div\>div\]\:tw-text-gray-500>div>div:first-child {
+.first\:\[\&\>div\>div\]\:tw-text-gray-500 > div > div:first-child {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.last\:\[\&\>div\>div\]\:\!tw-text-left>div>div:last-child {
+.last\:\[\&\>div\>div\]\:\!tw-text-left > div > div:last-child {
   text-align: left !important;
 }
 
-.last\:\[\&\>div\>div\]\:\!tw-text-center>div>div:last-child {
+.last\:\[\&\>div\>div\]\:\!tw-text-center > div > div:last-child {
   text-align: center !important;
 }
 
-.last\:\[\&\>div\>div\]\:tw-font-bold>div>div:last-child {
+.last\:\[\&\>div\>div\]\:tw-font-bold > div > div:last-child {
   font-weight: 700;
 }
 
 @media (min-width: 768px) {
-  .\[\&\>div\>div\]\:md\:tw-basis-full>div>div {
+  .\[\&\>div\>div\]\:md\:tw-basis-full > div > div {
     flex-basis: 100%;
   }
 
-  .first\:\[\&\>div\>div\]\:md\:tw-hidden>div>div:first-child {
+  .first\:\[\&\>div\>div\]\:md\:tw-hidden > div > div:first-child {
     display: none;
   }
 
-  .last\:\[\&\>div\>div\]\:md\:tw-hidden>div>div:last-child {
+  .last\:\[\&\>div\>div\]\:md\:tw-hidden > div > div:last-child {
     display: none;
   }
 }
 
-.\[\&\>div\>h2\]\:hover\:tw-text-primary:hover>div>h2 {
+.\[\&\>div\>h2\]\:hover\:tw-text-primary:hover > div > h2 {
   --tw-text-opacity: 1;
-  color: rgb(65 105 225 / var(--tw-text-opacity));
+  color: rgb(102 51 153 / var(--tw-text-opacity));
 }
 
-.\[\&\>div\]\:tw-border-t>div {
+.\[\&\>div\]\:tw-border-t > div {
   border-top-width: 1px;
 }
 
-.\[\&\>div\]\:tw-border-black>div {
+.\[\&\>div\]\:tw-border-black > div {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.\[\&\>div\]\:tw-p-2>div {
+.\[\&\>div\]\:tw-p-2 > div {
   padding: 0.5rem;
 }
 
-.\[\&\>div\]\:tw-text-sm>div {
+.\[\&\>div\]\:tw-text-sm > div {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
 
-.last-of-type\:\[\&\>div\]\:tw-border-b>div:last-of-type {
+.last-of-type\:\[\&\>div\]\:tw-border-b > div:last-of-type {
   border-bottom-width: 1px;
 }
 
 @media (min-width: 768px) {
-  .\[\&\>div\]\:md\:tw-flex-1>div {
+  .\[\&\>div\]\:md\:tw-flex-1 > div {
     flex: 1 1 0%;
   }
 
-  .\[\&\>div\]\:md\:tw-border-none>div {
+  .\[\&\>div\]\:md\:tw-border-none > div {
     border-style: none;
   }
 
-  .\[\&\>div\]\:md\:tw-py-3>div {
+  .\[\&\>div\]\:md\:tw-py-3 > div {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
   }
 }
 
-.\[\&\>div_button\]\:tw-flex>div button {
+.\[\&\>div_button\]\:tw-flex > div button {
   display: flex;
 }
 
-.\[\&\>div_button\]\:tw-items-center>div button {
+.\[\&\>div_button\]\:tw-items-center > div button {
   align-items: center;
 }
 
-.\[\&\>div_button\]\:tw-shadow-black>div button {
+.\[\&\>div_button\]\:tw-shadow-black > div button {
   --tw-shadow-color: #000;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
 @media (min-width: 768px) {
-  .\[\&\>div_button\]\:md\:tw-flex-col>div button {
+  .\[\&\>div_button\]\:md\:tw-flex-col > div button {
     flex-direction: column;
   }
 
-  .\[\&\>div_button\]\:md\:tw-gap-0>div button {
+  .\[\&\>div_button\]\:md\:tw-gap-0 > div button {
     gap: 0px;
   }
 
-  .\[\&\>div_button\]\:md\:tw-py-4>div button {
+  .\[\&\>div_button\]\:md\:tw-py-4 > div button {
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
 
-  .\[\&\>div_button\]\:md\:tw-shadow>div button {
+  .\[\&\>div_button\]\:md\:tw-shadow > div button {
     --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),
+      0 1px 2px -1px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
